# ChangeLog for sys-apps/dbus
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.338 2012/05/16 15:18:08 jer Exp $

  16 May 2012; Jeroen Roovers <jer@gentoo.org> dbus-1.4.20.ebuild:
  Stable for HPPA (bug #412535).

  15 May 2012; Samuli Suominen <ssuominen@gentoo.org> dbus-1.5.12.ebuild:
  This is ready to enter ~arch.

*dbus-1.5.12 (11 May 2012)

  11 May 2012; Samuli Suominen <ssuominen@gentoo.org> +dbus-1.5.12.ebuild,
  metadata.xml:
  Version bump to development series. File dbus-1.4.0-asneeded.patch fails to
  apply and should be looked into before keywording.

  05 May 2012; Brent Baude <ranger@gentoo.org> dbus-1.4.20.ebuild:
  Marking dbus-1.4.20 ppc for bug 412535

  05 May 2012; Raúl Porcel <armin76@gentoo.org> dbus-1.4.18.ebuild:
  Revert

  05 May 2012; Raúl Porcel <armin76@gentoo.org> dbus-1.4.18.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #403843

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> dbus-1.4.16.ebuild,
  dbus-1.4.16-r2.ebuild, dbus-1.4.18.ebuild, dbus-1.4.20.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  28 Apr 2012; Alexis Ballier <aballier@gentoo.org> dbus-1.4.20.ebuild:
  keyword ~amd64-fbsd

  23 Apr 2012; Brent Baude <ranger@gentoo.org> dbus-1.4.20.ebuild:
  Marking dbus-1.4.20 ppc64 for bug 412535

  22 Apr 2012; Markus Meier <maekke@gentoo.org> dbus-1.4.20.ebuild:
  arm stable, bug #412535

  18 Apr 2012; Jeff Horelick <jdhore@gentoo.org> dbus-1.4.20.ebuild:
  marked x86 per bug 412535

  18 Apr 2012; Agostino Sarubbo <ago@gentoo.org> dbus-1.4.20.ebuild:
  Stable for amd64, wrt bug #412535

*dbus-1.4.20 (29 Mar 2012)

  29 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +dbus-1.4.20.ebuild:
  Version bump wrt #410179 by Agostino Sarubbo. Stop keeping deprecated
  /usr/lib/dbus-1.0/services directory. Create symlink from /etc/machine-id to
  /var/lib/dbus/machine-id because it's defined through