@@ -15,18 +15,16 @@ AUX dbus-1.4.8-interix.patch 15837 RMD160 bdb9b7ba8e9e93790a8981c36ed22bebdd936e
 AUX dbus.init-1.0 1176 RMD160 1ad53e5859c94794b4dfcb0455bb63a0b858b83b SHA1 85a284e2f714f0b9e7f77d74be4325e2ac088e54 SHA256 2db2b6ea36854997f93ee0d0dfc470a1d1c792d355944a1272ba45b219ab61dd
 AUX dbus.initd 1185 RMD160 ddb4df28657c7cbceb20c67c95d78a982106759f SHA1 21cc5f013e061311d181b2eb6975f0fff48744da SHA256 98e37b8b6ed25004e48c5855d74c9361eea06d3fee13cefcc0ed10ccf452aa01
 AUX no-notify-oldkernel.patch 619 RMD160 bbf3357e9191f44f397df86a76dc2a336a3b8beb SHA1 8cadafe69dcb9ce64e307057c28614881e9cf0e2 SHA256 96b4d407b79ac728d7a5b4bf284f92da692c2417591c162c1386619c998d6805
-DIST dbus-1.4.12.tar.gz 1878025 RMD160 4c5c718117ebf453844743f6d3c3525d7593d722 SHA1 6288a0826fe02d02ddbe62af03c9401501e69cc2 SHA256 da3c97fd546610558d588799e27c4fa81101e754acbcd34747a42c131f30dbe7
 DIST dbus-1.4.20.tar.gz 1895099 RMD160 c0e88ab6bf6afe93a243a42d26f3b6c03e7892cd SHA1 9761eca23c0e6ea4ad822d92748703f9a0f58858 SHA256 103bdcd261a13140730b5fa69f56a98ab5c89ba3f0116ea62fcfd639520d5aaf
 DIST dbus-1.5.12.tar.gz 1925770 RMD160 f65bccf6a22ce2e05df4e7388c064b54256ce7fa SHA1 3140ea452337d664dbe6d30f0d990c756d101694 SHA256 5d3e09a831259ca64b15357cfa1c60a5a7ab06ef469d5b82c2308de9cadf1094
-EBUILD dbus-1.4.12.ebuild 7506 RMD160 e27bb3969c8a61f05be052ff5b36ef213c1bf0b9 SHA1 171b40e38e0cc390baed3e623bcbded282246df0 SHA256 263810d960fe1e6d7f50eb97afccf26b4c3c2be559c113767bc88f6183032fc9
-EBUILD dbus-1.4.20.ebuild 7370 RMD160 c9bd9f1a0f8dcdb4c6a0606f5867b60bc80c06df SHA1 f4fad2a7f09e9d9a35966650a685eb8238ab5061 SHA256 2bb665cc6bf3cac10b9903a7481dee133c081adb341b5bc0decbf1452b743c9f
-EBUILD dbus-1.5.12.ebuild 6821 RMD160 caa2adffe19a242eb6a87f577fe80faea1dd80c3 SHA1 5f093b042d4d4db968893a17079d2a3404b0df11 SHA256 5a573cf1ba964ccd1e27f8fece00af0517d89832804dcbb7cf151f5f399181c8
-MISC ChangeLog 49908 RMD160 e9f06b5db8b22223f0402abdf76ae6350f671be7 SHA1 7bcad12688670d8940c79dee37c8657fe6ba4ce7 SHA256 10e3a98ccf4f6e26896af17ca55cb81583b92e0dab4065717862ae371fef826e
+EBUILD dbus-1.4.20.ebuild 7368 RMD160 68ea335c797bc3a8a3763bae28ad129f4c645503 SHA1 a529b255a5cdff36e11d0df4fc47df6c46e30f32 SHA256 06c5dee807e19b75e012a5c1f014f7d9aa251e6a2e92134e7e88b06ad77ad9fe
+EBUILD dbus-1.5.12.ebuild 6823 RMD160 057a3e247c774b97d833524bf64c2f6eef623126 SHA1 b262d1e535d93d4951ac2b5f36d12bcaf205b5dd SHA256 8e4c07f5744f760df7044a658bee01cee78151f7664c4c72a0e94bdc690df72d
+MISC ChangeLog 50104 RMD160 877aec07b353725279d9f442bae34bc62991c30b SHA1 bf1a63da34a77b735caebf5e7824f5263f94d7a8 SHA256 ab1027723372ddd1186322f390d7ec64fabc3203015bad6be142b1644fb89fc7
 MISC metadata.xml 342 RMD160 8bf3f4bd6851d805afa364a4269170d7fad0d3d9 SHA1 e08553006779cbdea6aadb15a9280bdf4cb62e2b SHA256 5db8eac45a8872150729ee08297c2a19468336c3b9412e9f8e64ca2a2f5406c3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/As7UACgkQX3X2B8XHTonv4wCeOyvOEQ2yNCDwPgRis4zG6f7R
-WOEAni2sYiMOzs61DJCB4JYG3K4Ax7b0
-=WSU9
+iEYEARECAAYFAk/CFWMACgkQX3X2B8XHTokhVgCeOE/t4kTwZkeRPL4jBOMxjiKm
+1fQAn2G0BYxdQIyQjT8C4lxWvIARwCjn
+=sg7e
 -----END PGP SIGNATURE-----
