@@ -1,9 +1,9 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/dbus-1.5.12.ebuild,v 1.2 2012/05/15 21:17:47 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/dbus-1.5.12.ebuild,v 1.3 2012/05/24 04:21:00 vapier Exp $
 
 EAPI=4
-inherit autotools linux-info flag-o-matic python systemd virtualx prefix
+inherit autotools linux-info flag-o-matic python systemd virtualx user prefix
 
 DESCRIPTION="A message bus system, a simple way for applications to talk to each other"
 HOMEPAGE="http://dbus.freedesktop.org/"
